@@ -3,9 +3,6 @@ package persistencia;
 import gerenciador.GerenciadorBiblioteca;
 import modelos.ArquivoPDF;
 import modelos.Colecao;
-import modelos.Livro;
-import modelos.NotaDeAula;
-import modelos.Slide;
 
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
@@ -28,7 +25,6 @@ public class PersistenciaColecoes {
     public static void salvarColecoes(List<Colecao<? extends ArquivoPDF>> colecoes) throws IOException {
         try (BufferedWriter writer = Files.newBufferedWriter(Path.of(ARQUIVO_COLECOES))) {
             for (Colecao<? extends ArquivoPDF> c : colecoes) {
-                // Junta o caminho de todos os PDFs da coleção com o delimitador
                 List<String> caminhosPdf = new ArrayList<>();
                 for (ArquivoPDF pdf : c.getEntradas()) {
                     caminhosPdf.add(pdf.getCaminhoArquivo());
@@ -39,8 +35,7 @@ public class PersistenciaColecoes {
                         c.getAutor(),
                         String.valueOf(c.getLimite()),
                         c.getTipo().getName(), // Salva o nome completo da classe (ex: modelos.Livro)
-                        String.join(DELIMITADOR, caminhosPdf) // Adiciona todos os caminhos
-                );
+                        String.join(DELIMITADOR, caminhosPdf));
                 writer.write(linha);
                 writer.newLine();
             }
@@ -55,10 +50,10 @@ public class PersistenciaColecoes {
         Path path = Path.of(ARQUIVO_COLECOES);
 
         if (!Files.exists(path)) {
-            return colecoes; // Retorna mapa vazio se o arquivo não existe
+            return colecoes;
         }
 
-        // Obtém todos os PDFs da biblioteca para fazer a correspondência
+        // Mapeia todos os PDFs da biblioteca por seu caminho para fácil acesso
         List<ArquivoPDF> todosPdfs = GerenciadorBiblioteca.getInstancia().listarRegistros();
         Map<String, ArquivoPDF> mapaPdfs = new HashMap<>();
         for (ArquivoPDF pdf : todosPdfs) {
@@ -68,12 +63,15 @@ public class PersistenciaColecoes {
         try (BufferedReader reader = Files.newBufferedReader(path)) {
             String linha;
             while ((linha = reader.readLine()) != null) {
-                if (linha.isBlank())
+                // Usando trim().isEmpty() para compatibilidade com versões antigas de Java
+                if (linha.trim().isEmpty()) {
                     continue;
+                }
 
                 String[] partes = linha.split(DELIMITADOR);
-                if (partes.length < 4)
-                    continue; // Linha inválida
+                if (partes.length < 4) {
+                    continue;
+                }
 
                 String nome = partes[0];
                 String autor = partes[1];
@@ -81,17 +79,22 @@ public class PersistenciaColecoes {
                 String nomeClasse = partes[3];
 
                 try {
-                    // Recria a coleção com os metadados
-                    Class<? extends ArquivoPDF> tipoClasse = (Class<? extends ArquivoPDF>) Class.forName(nomeClasse);
-                    Colecao colecao = new Colecao<>(nome, autor, limite, tipoClasse);
+                    Class<?> classeCarregada = Class.forName(nomeClasse);
+                    // Adicionamos a anotação aqui para suprimir os avisos de forma controlada
+                    @SuppressWarnings("unchecked")
+                    Class<? extends ArquivoPDF> tipoClasse = (Class<? extends ArquivoPDF>) classeCarregada;
+
+                    // Criamos a coleção já com o tipo genérico correto
+                    Colecao<? extends ArquivoPDF> colecao = new Colecao<>(nome, autor, limite, tipoClasse);
 
                     // Adiciona os PDFs que pertencem a esta coleção
                     if (partes.length > 4) {
                         for (int i = 4; i < partes.length; i++) {
                             String caminhoPdf = partes[i];
                             ArquivoPDF pdf = mapaPdfs.get(caminhoPdf);
-                            if (pdf != null) {
-                                colecao.adicionarEntrada(pdf);
+                            if (pdf != null && tipoClasse.isInstance(pdf)) {
+                                // Chamada ao método genérico auxiliar para adicionar com segurança
+                                adicionarEntradaGenerica(colecao, pdf);
                             }
                         }
                     }
@@ -103,5 +106,15 @@ public class PersistenciaColecoes {
             }
         }
         return colecoes;
+    }
+
+    /**
+     * Método auxiliar genérico para adicionar uma entrada a uma coleção de forma
+     * segura,
+     * lidando com os tipos genéricos de forma correta.
+     */
+    @SuppressWarnings("unchecked")
+    private static <T extends ArquivoPDF> void adicionarEntradaGenerica(Colecao<T> colecao, ArquivoPDF entrada) {
+        colecao.adicionarEntrada((T) entrada);
     }
 }
